src/main/java/org/example/lsp/correct/FixedTermDepositAccount.java
package org.example.lsp.correct;

public class FixedTermDepositAccount implements IAccount {
    @Override
    public void deposit(Double amount) {
        // TODO
    }
}
