src/main/java/org/example/lsp/bad/SavingAccount.java
package org.example.lsp.bad;

public class SavingAccount implements IAccount {

    @Override
    public void deposit(final Double amount) {
        // Deposit amount to account.
    }

    @Override
    public void withdraw(final Double amount) {
        // Withdraw amount to account.
    }
}
